# videosummary

./: pyproject.toml
data/: links_video.json
src/: extract_audio.py  extract_text.py  summary.py
summaries/: 5 Essential ASO Strategies to Boost Your App Store Ranking in 2024.txt  Top 10 Mobile App Metrics  KPIs Explained.txt
transcriptions/: 5 Essential ASO Strategies to Boost Your App Store Ranking in 2024.txt  Top 10 Mobile App Metrics  KPIs Explained.txt
